...

      <Card>
        <Row>
          <Label variant="muted" style={{ flex: 1 }}>
            {tr.about.controller}
          </Label>
          <Label testID="about-controller">{DATA_CONTROLLER.name}</Label>
        </Row>
        <Row>
          <Label variant="muted" style={{ flex: 1 }}>
            {tr.about.contact}
          </Label>
          <Label>{DATA_CONTROLLER.contact}</Label>
...
